[gd_scene load_steps=23 format=3 uid="uid://c0o2d1rqeugpm"]

[ext_resource type="Script" uid="uid://jn4lwmrly54r" path="res://scene/player/player.gd" id="1_eqxiv"]
[ext_resource type="PackedScene" uid="uid://clsoje0yt1dit" path="res://scene/component/skill/SkillComponent.tscn" id="2_20a0v"]
[ext_resource type="PackedScene" uid="uid://fec4arl424pc" path="res://scene/component/card/CardComponent.tscn" id="3_astcg"]
[ext_resource type="Texture2D" uid="uid://d111f1mjv8x4c" path="res://asset/pic/fairy/left.png" id="3_bbt5x"]
[ext_resource type="Texture2D" uid="uid://rgktqsf1iapd" path="res://asset/pic/fairy/point.png" id="3_g1rlb"]
[ext_resource type="PackedScene" uid="uid://daqfogwcp42va" path="res://scene/component/passive/PassiveComponent.tscn" id="4_0k654"]
[ext_resource type="PackedScene" uid="uid://cw4f8v0lfq8dq" path="res://scene/component/buff/BuffComponent.tscn" id="4_54cbq"]
[ext_resource type="Texture2D" uid="uid://c7dk0w5s7aqfj" path="res://asset/pic/fairy/20241105-223621.png" id="5_3pdok"]
[ext_resource type="PackedScene" uid="uid://bn82kepgtwd7v" path="res://scene/component/cp/CpComponent.tscn" id="5_fov64"]
[ext_resource type="Shader" uid="uid://1idqb1bfupq2" path="res://asset/pic/anime/setred.gdshader" id="7_n3i7f"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kq405"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_keelo"]
radius = 86.0

[sub_resource type="Animation" id="Animation_3lp87"]
resource_name = "hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.25, 0.5, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hargt"]
_data = {
&"hurt": SubResource("Animation_3lp87")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7menj"]
shader = ExtResource("7_n3i7f")
shader_parameter/target_color = Color(1, 0, 0, 1)
shader_parameter/progress = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_fdhb2"]
atlas = ExtResource("3_bbt5x")
region = Rect2(0, 0, 182, 202)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7bnf"]
atlas = ExtResource("5_3pdok")
region = Rect2(0, 0, 182, 202)

[sub_resource type="SpriteFrames" id="SpriteFrames_8ocn4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdhb2")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7bnf")
}],
"loop": true,
"name": &"stay",
"speed": 1.0
}]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_xlgpr"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_nv7q1"]
normal = Vector2(0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_doahy"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_25blp"]
normal = Vector2(-1, 0)

[node name="player" type="CharacterBody2D"]
z_index = 10
z_as_relative = false
collision_mask = 48
motion_mode = 1
script = ExtResource("1_eqxiv")

[node name="skill" parent="." instance=ExtResource("2_20a0v")]

[node name="card" parent="." instance=ExtResource("3_astcg")]

[node name="passive" parent="." instance=ExtResource("4_0k654")]

[node name="CpComponent" parent="." instance=ExtResource("5_fov64")]

[node name="BuffComponent" parent="." instance=ExtResource("4_54cbq")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_kq405")

[node name="colli_point" type="Sprite2D" parent="CollisionShape2D"]
visible = false
z_index = 500
z_as_relative = false
scale = Vector2(0.04, 0.04)
texture = ExtResource("3_g1rlb")

[node name="invincible_time" type="Timer" parent="."]
wait_time = 0.5

[node name="pickup_area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="pickup_shape" type="CollisionShape2D" parent="pickup_area"]
shape = SubResource("CircleShape2D_keelo")

[node name="CardManager" type="Node2D" parent="."]

[node name="buffManager" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hargt")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_7menj")
position = Vector2(-1, 6.77626e-21)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_8ocn4")
animation = &"left"
autoplay = "stay"

[node name="reflect" type="CharacterBody2D" parent="." groups=["wall"]]
collision_layer = 4
collision_mask = 0

[node name="left" type="CollisionShape2D" parent="reflect"]
position = Vector2(-960, 2)
shape = SubResource("WorldBoundaryShape2D_xlgpr")

[node name="top" type="CollisionShape2D" parent="reflect"]
position = Vector2(-2, -540)
shape = SubResource("WorldBoundaryShape2D_nv7q1")

[node name="down" type="CollisionShape2D" parent="reflect"]
position = Vector2(0, 540)
shape = SubResource("WorldBoundaryShape2D_doahy")

[node name="right" type="CollisionShape2D" parent="reflect"]
position = Vector2(960, 1)
shape = SubResource("WorldBoundaryShape2D_25blp")

[node name="Camera2D" type="Camera2D" parent="."]
ignore_rotation = false
position_smoothing_speed = 500.0
rotation_smoothing_enabled = true
rotation_smoothing_speed = 10.0

[node name="black" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 4
z_as_relative = false
offset_left = -2104.0
offset_top = -1198.0
offset_right = -64.0
offset_bottom = -5.0
scale = Vector2(2, 2)
color = Color(0, 0, 0, 1)

[connection signal="timeout" from="invincible_time" to="." method="_on_invincible_time_timeout"]
[connection signal="area_entered" from="pickup_area" to="." method="_on_pickup_area_area_entered"]
[connection signal="body_entered" from="pickup_area" to="." method="_on_pickup_area_body_entered"]
